--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: job-scraper
+    name: python-scraper
     env: python
-    buildCommand: ./render-build.sh
-    startCommand: uvicorn naukri_scraper_service:app --host 0.0.0.0 --port 10000
     plan: free
+    buildCommand: ./render-build.sh
+    startCommand: gunicorn app:app
+
