--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: ./render-build.sh
-    startCommand: gunicorn app:app
+    startCommand: gunicorn naukri_scraper_service:app --host 0.0.0.0 --port $PORT
 
