Implement robust Chrome driver with 4 fallback strategies and improved build script

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi
 uvicorn
 gunicorn
-undetected-chromedriver
-selenium
+undetected-chromedriver>=3.5.0
+selenium>=4.15.0
 beautifulsoup4
 requests
 lxml
